package v1;

public class Main
{
    public static void main(String[] args)
    {
        new MyOwnTest().run(new GameController());
    }
}